# microgpt-test

./: README.md  config.py  generate.py  pyproject.toml  train.py
checkpoints/: wilde_history.pkl  wilde_lovecraft_alternating_step_20000_gpu.pkl  wilde_lovecraft_alternating_training_log.jsonl  wilde_step_10000_gpu.pkl  wilde_step_1000_gpu.pkl  wilde_step_100_gpu.pkl  wilde_step_2000_gpu.pkl  wilde_step_3000_gpu.pkl  wilde_step_4000_gpu.pkl  wilde_step_5000_gpu.pkl  wilde_step_6000_gpu.pkl  wilde_step_7000_gpu.pkl  wilde_step_8000_gpu.pkl  wilde_step_9000_gpu.pkl  wilde_summary.json  wilde_summary_gpu.json  wilde_training_log_gpu.jsonl
scripts/: chat.py  convert_checkpoint.py  generate.py  train.py  train_alternating.py  train_gpu.py  visualize.py
src/micro_trainer/: __init__.py  config.py  microgpt.py
src/micro_trainer/scripts/: chat.py  convert_checkpoint.py  generate.py  train.py  train_alternating.py  train_gpu.py  visualize.py
